add summaries and status into collection
